[tool.poetry]
name = "test "
version = "0.1.0"
description = ""
authors = ["JairAssisDev <jairv141@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.2"
imblearn = "^0.0"
numpy = "^2.0.0"
scikit-learn = "^1.5.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
